# sylverant-login_server

./: .gitmodules  CMakeLists.txt  README.md
l10n/: CMakeLists.txt
src/: login.c  login_server.c
